service.yaml
apiVersion: v1
kind: Service
metadata:
  name: py-app-fe-svc
  namespace: python-app
spec:
  selector:
    app: py-app-fe
  ports:
    - protocol: http
      port: 80
      targetPort: 5000
