destination-rule.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: py-app-fe-svc-dr
  namespace: python-app
spec:
  host: py-app-fe-svc.python-app.svc.cluster.local
  trafficPolicy:
    tls:
      mode: ISTIO_MUTUAL
