virtual-svc.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: py-app-fe-vs
  namespace: python-app
spec:
  hosts:
    - '*'
  gateways:
    - app-gateway  # Replace with your Istio gateway name if needed
  http:
    - match:
        - uri:
            prefix: "/fe"
      route:
        - destination:
            host: py-app-fe-svc.python-app.svc.cluster.local
            port:
              number: 80
